--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -195,3 +195,12 @@ footer nav ul {
 .divcat label {
 	padding-right: 20px;
 }
+
+button {
+	padding: 10px 20px;
+	margin: 0 15px;
+	border-radius: 20px;
+	stroke: 2px #1D6154;
+	color: #1D6154;
+	font-weight: bold;
+}
