--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -234,7 +234,7 @@ form p {
 	margin-top: 30px;
 }
 
-input {
+#contact input {
 	height: 51px;
 	width: 379px;
 }
@@ -382,7 +382,7 @@ article span {
 	height: 730px;
 	max-width: 80vw;
 	max-height: 80vh;
-	padding: 30px;
+	padding: 30px 30px 50px 30px;
 	background-color: #fff;
 	font-family: 'Work Sans';
 }
@@ -416,8 +416,15 @@ article span {
 }
 
 .green {
-	width: 179px;
+	width: 237px;
 	background-color: #1D6154;
+	border: none;
+	color: white;
+}
+
+.grey {
+	width: 237px;
+	background-color: #A7A7A7;
 	border: none;
 	color: white;
 }
@@ -463,7 +470,52 @@ article span {
 	right: 5px;
 	background-color: transparent;
 }
+.modal-ajout-photo {
+	background-color: #E8F1F6;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
 
+.modal-ajout-photo i {
+	margin-top: 28px;
+	font-size: 46px;
+	color: #B9C5CC;
+}
+
+.modal-ajout-photo button {
+	background-color: #CBD6DC;
+	width: 173px;
+	color: #306685;
+	border: none;
+	margin-top: 21px;
+}
+.modal-ajout-photo p {
+	font-size: 10px;
+	padding-bottom: 20px;
+	padding-top: 7px;
+	margin: 0;
+}
+
+.modal2 form {
+	padding-top: 10px;
+	padding-bottom: 47px;
+	width: 100%;
+}
+
+.modal2 form label {
+	padding-top: 20px;
+	padding-bottom: 10px;
+}
+
+.modal2 form input {
+	height: 51px;
+}
+
+.modal2 form select {
+	height: 51px;
+}
 
 /* ******************************************************** */
 .invisible {
