--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -287,6 +287,7 @@ span {
 	width: 80%;
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
 	margin-top: 15px;
 	cursor: pointer;
 }
