--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -287,9 +287,12 @@ span {
 	width: 80%;
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: flex-start;
 	margin-top: 15px;
 	cursor: pointer;
+}
+.forget {
+	justify-content: center;
 }
 
 span i {
